--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
+*{
+  box-sizing: border-box;
+}
 body {
+  font-family: Consolas, sans-serif;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  text-transform: capitalize !important;
+}
+
+/* Стили полосы прокрутки */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Дорожка */
+::-webkit-scrollbar-track {
+  background: #fafafa;
+}
+
+/* Указатель */
+::-webkit-scrollbar-thumb {
+  background: #07689f;
+}
+
+/* Указатель при наведении */
+::-webkit-scrollbar-thumb:hover {
+  background: #a2d5f2;
 }
